--- a/dicegame.css
+++ b/dicegame.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(gamble.jpg);
+    background-image: url(dicegame.png);
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -105,7 +105,7 @@ body {
 
 button {
     position: absolute;
-    width: 200px;
+    width: 210px;
     left: 50%;
     transform: translateX(-50%);
     color: #555;
@@ -137,6 +137,7 @@ i {
     transition: margin 0.3s;
 }
 
+
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
@@ -152,3 +153,30 @@ i {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+.final-score {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 520px;
+	color: #555;
+	font-size: 18px;
+	font-family: "Lato";
+	text-align: center;
+	padding: 10px;
+	width: 160px;
+	text-transform: uppercase;		
+}
+
+.final-score:focus {outline: none;}
+
+#dice-1 { top: 120px; }
+#dice-2 { top: 250px; }
+
+
+
+
+
+
+
+
