--- a/dicegame.css
+++ b/dicegame.css
@@ -151,7 +151,7 @@ i {
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
-.winner { background-color: #f7f7f7; }
+.winner { background-color: #e6ecf7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
 
 .final-score {
@@ -159,10 +159,11 @@ i {
 	left: 50%;
 	transform: translateX(-50%);
 	top: 520px;
-	color: #555;
+	color: #0e326d;
 	font-size: 18px;
 	font-family: "Lato";
 	text-align: center;
+	font-weight: bold;
 	padding: 10px;
 	width: 160px;
 	text-transform: uppercase;		
