--- a/ping.css
+++ b/ping.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(gamble.jpg);
+    background-image: url(gamble.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -150,5 +150,5 @@ i {
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
-.winner { background-color: #f7f7f7; }
+.winner { background-color: #e6ecf7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
